log
Fri 23 Sep 2022 07:47:28 PM UTC: 
 tests:  1|8
total_score: 0/70
80f43b2
Fri 23 Sep 2022 08:42:37 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
4616efc
Fri 23 Sep 2022 08:43:26 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   44 |     return tree;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
28925fa
Fri 23 Sep 2022 08:47:23 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|8
total_score: 0/70
4e68159
Fri 23 Sep 2022 08:49:27 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|8
total_score: 0/70
22d7fc4
